feat: allow to create and update an account
